[gd_scene load_steps=2 format=3 uid="uid://c7basemenu12345"]

[ext_resource type="Script" path="res://scripts/phase1/base_menu.gd" id="1_menu"]

[node name="BaseMenu" type="CanvasLayer"]
layer = 20
script = ExtResource("1_menu")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Space Station"
horizontal_alignment = 1

[node name="SellSection" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SellHeader" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/SellSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "-- Sell Resources --"
horizontal_alignment = 1

[node name="IronLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/SellSection"]
layout_mode = 2
text = "Iron: 0 units"
horizontal_alignment = 1

[node name="SellButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/SellSection"]
layout_mode = 2
text = "Sell All Iron"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="UpgradeSection" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UpgradeHeader" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "-- Upgrades --"
horizontal_alignment = 1

[node name="UpgradeLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeSection"]
layout_mode = 2
text = "Cargo Expansion: +50 capacity (500 credits)"
horizontal_alignment = 1

[node name="UpgradeButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeSection"]
layout_mode = 2
text = "Buy"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15
text = "Leave Station"
